# connect-four-agents

./: .gitignore  Analisis.ipynb  README.md  analysis.ipynb  comparacion_agentes.md  comparacion_agentes_completo.md  mcts_agent.py  pyproject.toml  tournament.py  validate.py  validate_julian.py  validate_vs_groupA.py  visualization.py
groups/Combinado/: policy.py  readme.md
groups/Cristian/: entrega.ipynb  policy.py  policy_qValues.py  q_table.pkl  readme.md
groups/Group A/: policy.py
groups/Group B/: policy.py
groups/Group C/: policy.py
groups/Julian/: entrega.ipynb  generar_pdf.py  policy.py  readme.md
versus/: match_Group B_vs_Group A.json  match_Group B_vs_Group C.json  match_Group C_vs_Group A.json
