[project]
name = "connect-four-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]
